- Удалил полноэкранную рекламу.  - Добавил количество отсортированных постов сверху первого поста в PostsActivity(см. item_post.xml).  - Добавил верхний отступ для первого элемента в GroupsActivity.

--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -3,11 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="65dp"
+    android:layout_height="@dimen/group_item_height"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/group_container">
     <ImageView
         android:id="@+id/group_icon"
         android:layout_width="50dp"
