- Добавлено сохранение сортировок на главном экране с возможностью удаления.  - Добавлен заголовок в ToolBar активити выбора группы и активити самой группы.  - Добавлено отображение состояния загрузки групп в GroupsActivity, отдельной группы в GroupActivity, а также постов в PostsActivity (загружается, соединение разорвано).  - Добавлена возможность сортировки постов за последней день.  - Улучшена работа MaterialDialog и DatePickerDialog в GroupActivity(сохранение выбранного периода и т.п.).  - Исправлено отображение времени видео (если меньше 10 секунд то начинается с 0).  - Исправлен баг при котором учитывался закрепленный пост во время сортировки.  - targetSdkVersion и compileSdkVersion обновлены с 25 до 27 версии. Также обновлены различные библиотеки. Осуществлен переход на Android Studio 3.0

--- a/app/src/main/res/layout/activity_groups.xml
+++ b/app/src/main/res/layout/activity_groups.xml
@@ -8,6 +8,9 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:scrollbars="vertical"/>
 
     <ProgressBar
@@ -16,5 +19,57 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
+
+    <RelativeLayout
+        android:id="@+id/disconnected_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/disconnected_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/ic_disconnected"/>
+
+        <TextView
+            android:id="@+id/disconnected_title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/disconnected_image"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"
+            android:text="@string/disconnected_title_text"
+            android:textAppearance="?android:textAppearanceMedium"/>
+
+        <TextView
+            android:id="@+id/disconnected_subtitle_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/disconnected_title_text"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif"
+            android:gravity="center"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="@string/disconnected_subtitle_text"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textColor="#A2AAB0"/>
+
+        <Button
+            android:id="@+id/disconnected_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/disconnected_subtitle_text"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:text="@string/disconnected_button_text"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
