--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -10,7 +10,7 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    tools:layout_marginTop="-0dp">
+    tools:layout_marginTop="-1000dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -155,7 +155,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:paddingRight="32dp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorAccent"
             android:textSize="16sp"
             android:textStyle="bold"
             android:visibility="gone"
@@ -179,7 +179,8 @@
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:gravity="center">
 
                 <ImageView
                     android:layout_width="24dp"
@@ -197,8 +198,6 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-                    android:layout_marginEnd="40dp"
-                    android:layout_marginRight="40dp"
                     android:text="0"
                     tools:text="147"/>
             </RelativeLayout>
@@ -211,7 +210,8 @@
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:gravity="center">
 
                 <ImageView
                     android:layout_width="24dp"
@@ -229,8 +229,6 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-                    android:layout_marginEnd="40dp"
-                    android:layout_marginRight="40dp"
                     android:text="0"
                     tools:text="21"/>
             </RelativeLayout>
@@ -243,7 +241,8 @@
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:gravity="center">
 
                 <ImageView
                     android:layout_width="32dp"
@@ -261,8 +260,6 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-                    android:layout_marginEnd="40dp"
-                    android:layout_marginRight="40dp"
                     android:text="0"
                     tools:text="12"/>
             </RelativeLayout>
