--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#5b7aa8</color>
     <color name="colorPrimaryDark">#4b6d9e</color>
     <color name="colorAccent">#1a79c4</color>
+    <color name="postsBackground">#e4eaea</color>
 </resources>
