--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -55,12 +55,12 @@
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/position"
-            android:layout_alignStart="@+id/position"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_below="@id/position"
             android:layout_marginBottom="16dp"
             android:visibility="gone"
-            expandableTextView:maxCollapsedLines="8"
+            expandableTextView:maxCollapsedLines="14"
             tools:visibility="visible">
             <TextView
                 android:id="@id/expandable_text"
@@ -69,7 +69,9 @@
                 android:ellipsize="end"
                 android:lineSpacingExtra="1sp"
                 android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
                 android:paddingRight="16dp"
+                android:paddingStart="16dp"
                 android:textColor="@android:color/black"
                 android:textSize="15sp"
                 tools:text='Премьер-министр Ирака Хайдер аль-Абади поздравил иракские войска с освобождением второго по величине иракского города Мосула от боевиков группировки "Исламское государство".\n\nБитва за город велась с 17 октября 2016 года.\n\nБоевики ИГ захватили Мосул в июне 2014 года. После этого джихадисты взяли под контроль большую территорию Ирака и Сирии, на которой был объявлен так называемый халифат.'
