--- a/app/src/main/res/layout/item_post_media.xml
+++ b/app/src/main/res/layout/item_post_media.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,52 +10,56 @@
         android:id="@+id/icon"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_song"/>
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/icon"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_toEndOf="@+id/icon"
+        android:layout_toRightOf="@+id/icon"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingRight="80dp"
+        android:paddingEnd="32dp"
+        android:paddingRight="32dp"
         android:textColor="@android:color/black"
         android:textSize="16sp"
-        app:layout_constraintLeft_toRightOf="@+id/icon"
-        app:layout_constraintTop_toTopOf="@+id/icon"
-        app:layout_constraintWidth_default="wrap"
-        tools:text="HUMBLE HUMBLE HUMBLE HUMBLE HUMBLE HUMBLE HUMBLE HUMBLE HUMBLE HUMBLE "/>
+        tools:text="HUMBLE"/>
 
     <TextView
         android:id="@+id/subtitle"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
+        android:layout_alignBottom="@+id/icon"
+        android:layout_alignLeft="@+id/title"
+        android:layout_alignStart="@+id/title"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingRight="128dp"
-        app:layout_constraintBottom_toBottomOf="@+id/icon"
-        app:layout_constraintLeft_toLeftOf="@+id/title"
-        app:layout_constraintWidth_default="wrap"
-        tools:text="Kendrick Lamar Kendrick Lamar Kendrick Lamar Kendrick Lamar Kendrick Lamar Kendrick Lamar "/>
+        android:paddingEnd="64dp"
+        android:paddingRight="64dp"
+        tools:text="Kendrick Lamar"/>
 
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/subtitle"
+        android:layout_alignBottom="@+id/subtitle"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:visibility="gone"
-        app:layout_constraintBaseline_toBaselineOf="@+id/subtitle"
-        app:layout_constraintRight_toRightOf="parent"
         tools:text="2:57"
         tools:visibility="visible"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
