- Added ExpandableTextView to posts instead of regular TextView. - Has changed interval between 100 posts download from 0.3 seconds to 0.4 seconds so no errors occurs during download. - Added PreCachingLayoutManager which is used instead regular LinearLayoutManager in GroupsActivity and PostsActivity. - Changed names of classes and divided entities for download posts for a recyclerview and posts for sorting.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#4b6d9e</color>
     <color name="colorAccent">#1a79c4</color>
     <color name="postsBackground">#e4eaea</color>
+    <color name="photoBackground">#e6e6e6</color>
 </resources>
