--- a/app/src/main/res/layout/activity_posts.xml
+++ b/app/src/main/res/layout/activity_posts.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/postsBackground"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".posts.ui.PostsActivity">
 
     <android.support.v7.widget.Toolbar
@@ -16,14 +17,6 @@
         android:background="@color/colorPrimary"
         android:elevation="4dp"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-        <!--
-        <ImageView
-            android:id="@+id/back_arrow"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:srcCompat="@drawable/ic_back_arrow"
-            android:background="?attr/selectableItemBackground"/>
-            -->
         <ImageView
             android:id="@+id/group_icon"
             android:layout_width="48dp"
@@ -40,24 +33,10 @@
             android:textColor="@android:color/white"
             tools:text="AndroidDev - разработка Android приложений"/>
     </android.support.v7.widget.Toolbar>
-
-    <!--
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:elevation="4dp"
-        app:titleTextColor="@android:color/white"
-        android:theme="@style/AppTheme"
-        app:popupTheme="@style/AppTheme"/>
-        -->
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
         android:scrollbars="vertical"/>
 
-</RelativeLayout>
+</LinearLayout>
