--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -2,11 +2,15 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
-    tools:layout_marginTop="-300dp">
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    tools:layout_marginTop="-0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,6 +23,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -46,29 +51,49 @@
             android:textSize="18sp"
             tools:text="8 июня 2015 года в 19:26"/>
 
-        <TextView
+        <com.ovchinnikovm.android.vktop.lib.ExpandableTextView
             android:id="@+id/text"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/position"
             android:layout_alignStart="@+id/position"
             android:layout_below="@id/position"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            android:lineSpacingExtra="1sp"
-            android:textColor="@android:color/black"
+            android:layout_marginBottom="16dp"
             android:visibility="gone"
-            tools:text='Премьер-министр Ирака Хайдер аль-Абади поздравил иракские войска с освобождением второго по величине иракского города Мосула от боевиков группировки "Исламское государство".\n\nБитва за город велась с 17 октября 2016 года.\n\nБоевики ИГ захватили Мосул в июне 2014 года. После этого джихадисты взяли под контроль большую территорию Ирака и Сирии, на которой был объявлен так называемый халифат.'
-            tools:visibility="visible"/>
+            expandableTextView:maxCollapsedLines="8"
+            tools:visibility="visible">
+            <TextView
+                android:id="@id/expandable_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:lineSpacingExtra="1sp"
+                android:paddingEnd="16dp"
+                android:paddingRight="16dp"
+                android:textColor="@android:color/black"
+                android:textSize="15sp"
+                tools:text='Премьер-министр Ирака Хайдер аль-Абади поздравил иракские войска с освобождением второго по величине иракского города Мосула от боевиков группировки "Исламское государство".\n\nБитва за город велась с 17 октября 2016 года.\n\nБоевики ИГ захватили Мосул в июне 2014 года. После этого джихадисты взяли под контроль большую территорию Ирака и Сирии, на которой был объявлен так называемый халифат.'
+                />
+
+            <ImageButton
+                android:id="@id/expand_collapse"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:background="@android:color/transparent"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:padding="16dp"/>
+        </com.ovchinnikovm.android.vktop.lib.ExpandableTextView>
 
         <ImageView
             android:id="@+id/single_photo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text"
-            android:layout_marginTop="16dp"
-
+            android:adjustViewBounds="true"
+            android:background="@color/photoBackground"
             android:maxHeight="600dp"
             android:visibility="gone"
             tools:src="@drawable/test_image"
@@ -77,9 +102,10 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/photos_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="165dp"
+            android:layout_height="@dimen/photos_recyclerview_height"
             android:layout_below="@id/single_photo"
-            android:layout_marginTop="16dp"
+            android:clickable="true"
+            android:focusable="true"
             android:visibility="gone"
             tools:visibility="gone"/>
 
@@ -88,6 +114,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/photos_recyclerview"
+            android:clickable="true"
+            android:focusable="true"
             android:visibility="gone"
             tools:visibility="gone"/>
 
