--- a/app/src/main/res/layout/item_post_reply.xml
+++ b/app/src/main/res/layout/item_post_reply.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,9 +15,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginStart="16dp"/>
 
     <ImageView
         android:id="@+id/reply_icon"
@@ -55,20 +56,37 @@
         android:textSize="14sp"
         tools:text="21 июня в 21:15"/>
 
-    <TextView
+    <com.ovchinnikovm.android.vktop.lib.ExpandableTextView
         android:id="@+id/att_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/group_icon"
-        android:layout_alignStart="@id/group_icon"
+        android:layout_alignLeft="@+id/group_icon"
+        android:layout_alignStart="@+id/group_icon"
         android:layout_below="@id/group_icon"
+        android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="8dp"
-        android:lineSpacingExtra="1sp"
-        android:textColor="@android:color/black"
         android:visibility="gone"
-        tools:text='Премьер-министр Ирака Хайдер аль-Абади поздравил иракские войска с освобождением второго по величине иракского города Мосула от боевиков группировки "Исламское государство".\n\nБитва за город велась с 17 октября 2016 года.\n\nБоевики ИГ захватили Мосул в июне 2014 года. После этого джихадисты взяли под контроль большую территорию Ирака и Сирии, на которой был объявлен так называемый халифат.'
-        tools:visibility="visible"/>
+        expandableTextView:maxCollapsedLines="8"
+        tools:visibility="visible">
+        <TextView
+            android:id="@id/expandable_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lineSpacingExtra="1sp"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            tools:text='Премьер-министр Ирака Хайдер аль-Абади поздравил иракские войска с освобождением второго по величине иракского города Мосула от боевиков группировки "Исламское государство".\n\nБитва за город велась с 17 октября 2016 года.\n\nБоевики ИГ захватили Мосул в июне 2014 года. После этого джихадисты взяли под контроль большую территорию Ирака и Сирии, на которой был объявлен так называемый халифат.'
+            />
+
+        <ImageButton
+            android:id="@id/expand_collapse"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:background="@android:color/transparent"
+            android:padding="16dp"/>
+    </com.ovchinnikovm.android.vktop.lib.ExpandableTextView>
 
     <ImageView
         android:id="@+id/att_single_photo"
@@ -76,7 +94,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/att_text"
         android:layout_marginTop="16dp"
-
+        android:adjustViewBounds="true"
+        android:background="@color/photoBackground"
         android:visibility="gone"
         tools:src="@drawable/test_image"
         tools:visibility="visible"/>
@@ -87,6 +106,8 @@
         android:layout_height="165dp"
         android:layout_below="@id/att_single_photo"
         android:layout_marginTop="16dp"
+        android:clickable="true"
+        android:focusable="true"
         android:visibility="gone"
         tools:visibility="visible"/>
 
@@ -95,6 +116,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/att_photos_recyclerview"
+        android:clickable="true"
+        android:focusable="true"
         android:visibility="gone"
         tools:visibility="visible"/>
 </RelativeLayout>
