--- a/app/src/main/res/layout/photo_holder.xml
+++ b/app/src/main/res/layout/photo_holder.xml
@@ -8,7 +8,7 @@
         android:id="@+id/photo"
         android:layout_width="wrap_content"
         android:layout_height="165dp"
-
+        android:adjustViewBounds="true"
         tools:src="@drawable/test_image"/>
 
 </FrameLayout>
