- В предыдущем комите не были добавлены новые файлы. Добавляю их в этом.  - Добавлена SettingsActivity, в которую можно попасть из MainActivity. В SettingsActivity можно отключить уведомления, изменить звук уведомлений и включить вибрацию при уведомлениях(начиная с api 26 последние два настраиваются в канале уведомлений).  - Теперь для каждого пользователя вк отображаются только его отсортированные посты(раньше отображались всех пользователей, зашедших с телефона).  - Теперь удалять отсортированные посты можно также долгим тапом по ним.

--- a/vksdk_library/src/main/res/layout/vk_captcha_dialog.xml
+++ b/vksdk_library/src/main/res/layout/vk_captcha_dialog.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@color/vk_grey_color"
     android:padding="20dp"
-    tools:context=".VKCaptchaActivity$PlaceholderFragment">
+    tools:activityContext=".VKCaptchaActivity$PlaceholderFragment">
 
     <RelativeLayout
         android:id="@+id/captcha_container"
