--- a/app/src/main/res/layout/activity_posts.xml
+++ b/app/src/main/res/layout/activity_posts.xml
@@ -8,7 +8,7 @@
     android:background="@color/postsBackground"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".posts.ui.PostsActivity">
+    tools:activityContext=".posts.ui.PostsActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
