--- a/vksdk_library/src/main/res/layout-v16/vk_share_dialog.xml
+++ b/vksdk_library/src/main/res/layout-v16/vk_share_dialog.xml
@@ -7,7 +7,7 @@
     android:layout_centerInParent="true"
     android:layout_gravity="center"
     android:orientation="vertical"
-    tools:context="com.vk.sdk.dialogs.VKShareDialog"
+    tools:activityContext="com.vk.sdk.dialogs.VKShareDialog"
     tools:ignore="RtlHardcoded">
 
     <View
